[package]
name = "crdt-rga"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "rga_performance"
harness = false
