[package]
name = "crdt-rga"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-skiplist = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "rga_performance"
harness = false
